# python-webscrapper

./: main.py  pyproject.toml  python.csv  test.py
extractors/: test1.py  test2.py  wwr.py
